style: change height of background in dark mode from fixed value to fit-content for improved responsiveness

--- a/style.css
+++ b/style.css
@@ -3953,7 +3953,7 @@ html:has(body.page-dark) {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
-  height: 6800px;
+  height: fit-content;
 }
 
 .page-fortnite .capn-takeover ~ .capn-takeover .capn-takeover__header,
